test/soft-contract/ill-typed/append.caprice
(* TEST
  include refutable;
*)


let is_nonempty ls =
  match ls with
  | [] -> false
  | _ -> true
  end

let rec append (type a') (a : list a') (b : list a') : { ls : list a' | is_nonempty ls } =
  match a with
  | [] -> b (* ERROR: `b` could be empty *)
  | hd :: tl -> hd :: append a' tl b
  end
